--- a/PZW_dr_1/MainWindow.xaml
+++ b/PZW_dr_1/MainWindow.xaml
@@ -17,7 +17,7 @@
             <Button x:Name="RightButton"  Padding="10" Margin="5" Width="70">Dodaj D</Button>
         </StackPanel>
         <Rectangle Grid.Row="1" Width="110" Height="110" Margin="10,0,10,10" Fill="Blue"></Rectangle>
-        <Border BorderBrush="Black" BorderThickness="1" Grid.Column="1" Grid.Row="1"  Width="300" Height="40" Margin="18,43,36,37">
+        <Border BorderBrush="Black" BorderThickness="1" Grid.Column="1" Grid.Row="1"  Width="300" Height="40" Margin="15 5">
             <TextBox TextAlignment="Left" Padding="10" FontWeight="Bold">Search</TextBox>
         </Border>
         <ScrollViewer Grid.Row="2" Grid.Column="0" VerticalScrollBarVisibility="Auto">
