--- a/PZW_dr_1/MainWindow.xaml
+++ b/PZW_dr_1/MainWindow.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="PZW_dr_1.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:controls="clr-namespace:PZW_dr_1.Controls"
         Title="MainWindow" Height="350" Width="525" Loaded="Window_Loaded">
     <Grid>
         <Grid.RowDefinitions>
@@ -16,25 +17,25 @@
             <Button x:Name="LeftButton" Padding="10" Margin="5" Width="70">Dodaj L</Button>
             <Button x:Name="RightButton"  Padding="10" Margin="5" Width="70">Dodaj D</Button>
         </StackPanel>
-        <Rectangle Grid.Row="1" Width="110" Height="110" Margin="10,0,10,10" Fill="Blue"></Rectangle>
+        <Rectangle Grid.Row="1" Grid.Column="0" Width="110" Height="110" Margin="10,0,10,10" Fill="LightBlue"></Rectangle>
+        <controls:User x:Name="OnlineUser" Grid.Column="0" Grid.Row="1" Ime="Luka" Putanja="/Resources/Images/User_boy2.png" Width="80" Height="80" Margin="0 5"></controls:User>
         <Border BorderBrush="Black" BorderThickness="1" Grid.Column="1" Grid.Row="1"  Width="300" Height="40" Margin="15 5">
             <TextBox TextAlignment="Left" Padding="10" FontWeight="Bold">Search</TextBox>
         </Border>
         <ScrollViewer Grid.Row="2" Grid.Column="0" VerticalScrollBarVisibility="Auto">
-            <StackPanel x:Name="RectangleContainer" Orientation="Vertical">
-                <Rectangle Width="80" Height="80" Fill="Coral" Margin="0 5"></Rectangle>
-                <Rectangle Width="80" Height="80" Fill="Coral" Margin="0 5"></Rectangle>
-                <Rectangle Width="80" Height="80" Fill="Coral" Margin="0 5"></Rectangle>
-                <Rectangle Width="80" Height="80" Fill="Coral" Margin="0 5"></Rectangle>
+            <StackPanel x:Name="UsersContainer" Orientation="Vertical">
+                <controls:User Ime="Ana" Putanja="/Resources/Images/User_girl1.png" Width="80" Height="80" Margin="0 5"></controls:User>
+                <controls:User Ime="Ivan" Putanja="/Resources/Images/User_boy1.png" Width="80" Height="80" Margin="0 5"></controls:User>
+                <controls:User Ime="Ema" Putanja="/Resources/Images/User_girl2.png" Width="80" Height="80" Margin="0 5"></controls:User>
             </StackPanel>
         </ScrollViewer>
         <ScrollViewer Grid.Row="2" Grid.Column="1" VerticalScrollBarVisibility="Auto">
             <StackPanel x:Name="LinesContainer" Orientation="Vertical">
-                <Rectangle Width="300" Height="40" Fill="Red" Margin="15 5"></Rectangle>
-                <Rectangle Width="300" Height="40" Fill="Red" Margin="15 5"></Rectangle>
-                <Rectangle Width="300" Height="40" Fill="Red" Margin="15 5"></Rectangle>
-                <Rectangle Width="300" Height="40" Fill="Red" Margin="15 5"></Rectangle>
-                <Rectangle Width="300" Height="40" Fill="Red" Margin="15 5"></Rectangle>
+                <controls:Post Ime_post="Ana" Putanja_post="/Resources/Images/User_girl1.png" Sadrzaj="Ova stranica je super!" Margin="15 5" Width="300" Height="70"></controls:Post>
+                <controls:Post Ime_post="Ema" Putanja_post="/Resources/Images/User_girl2.png" Sadrzaj="Ana, kad ćemo na kavu?" Margin="15 5" Width="300" Height="70"></controls:Post>
+                <controls:Post Ime_post="Ana" Putanja_post="/Resources/Images/User_girl1.png" Sadrzaj="Mogle bi sutra oko 5, skupit ću te s autom?" Margin="15 5" Width="300" Height="70"></controls:Post>
+                <controls:Post Ime_post="Ivan" Putanja_post="/Resources/Images/User_boy1.png" Sadrzaj="Idem i ja!" Margin="15 5" Width="300" Height="70"></controls:Post>
+                <controls:Post Ime_post="Luka" Putanja_post="/Resources/Images/User_boy2.png" Sadrzaj="Dogovarajte se u inboxu! Ovdje mi samo bezveze punite obavijesti!" Margin="15 5" Width="300" Height="70"></controls:Post>
             </StackPanel>
         </ScrollViewer>
       </Grid>
